# mssql-py-operator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
fixutres/: test_data.sql
mssql/: __init__.py  __main__.py  cli.py  config.py
tests/: test_mssql.py
