[tool.poetry]
name = "mssql"
version = "0.1.0"
description = "sql server operator"
authors = ["ahmed belhoula <ahmd.belhoula@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mssql = "mssql.cli:app"

[tool.poetry.dependencies]
python = "^3.6"
pyodbc = "^4.0.17"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"